compiler/tools/fpp-check/test/redef/module_topology.ref.txt
fpp-check
[ local path prefix ]/compiler/tools/fpp-check/test/redef/module_topology.fpp: 2.1
topology M { }
^
error: redefinition of symbol M
previous definition is here:
[ local path prefix ]/compiler/tools/fpp-check/test/redef/module_topology.fpp: 1.1
module M { }
^
